testsuite/gnatprove/tests/ug__account2/test.out

account2.adb:15:26: error: volatile object cannot appear in this context [E0004]
   15 |         Num_Accounts := Num_Accounts + 1;
      |                         ^~~~~~~~~~~~
  launch "gnatprove --explain=E0004" for more information
gnatprove: error during generation of Global contracts
